# RAG-Embedchain

./: .gitignore  Readme.md  app.py  embedchain_setup.py  pyproject.toml  session_history.json
backend/: Dockerfile  embedchain_setup.py  llm.py  requirements.txt
frontend/: Dockerfile  app.py  requirements.txt
k8s/: Readme.md  backend.yaml  chroma.yaml  frontend.yaml  pv-pvc-chroma.yaml
